tests/traci/variable_subscription/errors/ArrivedVehicle/testclient_out.traci
TraCITestClient output file. Date: Fri Aug 16 10:28:20 2019


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=212 objID=0 with 1 variables
.. Answered with error to command (212), [description: Could not add subscription. Vehicle '0' is not known.]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
